sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:8: error: not found: value getNombreValeur
	for (i <- getNombreValeur() to 0 by -1) {
                  ^